src/test/ui/resolve/resolve-conflict-extern-crate-vs-extern-crate.stderr
error[E0259]: the name `std` is defined multiple times
  --> $DIR/resolve-conflict-extern-crate-vs-extern-crate.rs:2:1
   |
LL | extern crate std;
   | ^^^^^^^^^^^^^^^^^ `std` reimported here
   |
   = note: `std` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | extern crate std as other_std;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0259`.
