src/test/ui/resolve/resolve-conflict-extern-crate-vs-extern-crate.rs
#[allow(unused_extern_crates)]
extern crate std;
//~^ ERROR the name `std` is defined multiple times

fn main(){}
